--- a/Assignment-1/1.ipynb
+++ b/Assignment-1/1.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-01T06:28:26.846061100Z",
-     "start_time": "2023-11-01T06:28:26.781486Z"
+     "end_time": "2023-11-10T08:50:22.010865900Z",
+     "start_time": "2023-11-10T08:50:21.859858400Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,16 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "def simplex(A, B, C, X):\n",
+    "def simplex(A, B, C, X, M):\n",
+    "    # (m,n) = M.shape\n",
+    "    # A = M[2:,0:n-1]\n",
+    "    # # print(A)\n",
+    "    # B = M[2:,n-1]\n",
+    "    # # print(B)\n",
+    "    # C = M[1,0:n-1]\n",
+    "    # # print(C)\n",
+    "    # X = M[0,0:n-1]\n",
+    "    # # print(X)\n",
     "    while True:\n",
     "        tgt = np.where(np.abs(A @ X - B) == 0)[0]\n",
     "        A_tgt = A[tgt]\n",
@@ -55,8 +64,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T06:28:26.854458500Z",
-     "start_time": "2023-11-01T06:28:26.849947800Z"
+     "end_time": "2023-11-10T08:50:22.017950900Z",
+     "start_time": "2023-11-10T08:50:22.012864900Z"
     }
    },
    "id": "a27fdd81c3cf537a"
@@ -72,6 +81,14 @@
       "Optimal Solution : [1. 4.]\n",
       "Objective Value :  22.0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "array([1., 4.])"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -79,13 +96,14 @@
     "B = np.array([4, 9, 3, 0, 0])\n",
     "C = np.array([2, 5])\n",
     "X = np.array([2, 0])\n",
-    "simplex(A, B, C, X)"
+    "M = np.array([[2,0,0],[2,5,0],[2,-1, 4],[1,2,9],[-1,1,3],[-1,0,0],[0,-1,0]])\n",
+    "simplex(A, B, C, X, M)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T06:28:26.863214200Z",
-     "start_time": "2023-11-01T06:28:26.853459600Z"
+     "end_time": "2023-11-10T08:50:22.026929500Z",
+     "start_time": "2023-11-10T08:50:22.017950900Z"
     }
    },
    "id": "b234d273fa65575b"
@@ -101,6 +119,14 @@
       "Optimal Solution : [7. 3.]\n",
       "Objective Value :  43.0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "array([7., 3.])"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -108,20 +134,21 @@
     "B = np.array([10, 42, 0, 0])\n",
     "C = np.array([4, 5])\n",
     "X = np.array([10, 0])\n",
-    "simplex(A, B, C, X)"
+    "M = np.array([[10,0,0],[4,5,0],[1,1,10],[3,7,42],[-1,0,0],[0,-1,0]])\n",
+    "simplex(A, B, C, X, M)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T06:28:26.863214200Z",
-     "start_time": "2023-11-01T06:28:26.859053200Z"
+     "end_time": "2023-11-10T08:50:22.128434400Z",
+     "start_time": "2023-11-10T08:50:22.029930200Z"
     }
    },
    "id": "83a97a02ea28840"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -130,6 +157,14 @@
       "Optimal Solution : [5.  0.  2.5]\n",
       "Objective Value :  15.0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "array([5. , 0. , 2.5])"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -137,20 +172,20 @@
     "B = np.array([10, 20, 5, 0, 0, 0])\n",
     "C = np.array([2, -1, 2])\n",
     "X = np.array([5, 0, 0])\n",
-    "simplex(A, B, C, X)"
+    "simplex(A, B, C, X, M)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T06:28:26.872674800Z",
-     "start_time": "2023-11-01T06:28:26.864213300Z"
+     "end_time": "2023-11-10T08:50:30.098015100Z",
+     "start_time": "2023-11-10T08:50:30.090631300Z"
     }
    },
    "id": "96a8400ea96be7e4"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -165,27 +200,26 @@
     "B = np.array([10, 40, 0, 0])\n",
     "C = np.array([2, 1])\n",
     "X = np.array([10, 0])\n",
-    "simplex(A, B, C, X)"
+    "simplex(A, B, C, X, M)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T06:28:26.907681400Z",
-     "start_time": "2023-11-01T06:28:26.869209600Z"
+     "end_time": "2023-11-10T08:50:33.572692700Z",
+     "start_time": "2023-11-10T08:50:33.569177100Z"
     }
    },
    "id": "74f1c680d4e97872"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T06:28:26.907681400Z",
-     "start_time": "2023-11-01T06:28:26.872108Z"
+     "start_time": "2023-11-10T08:50:22.276321700Z"
     }
    },
    "id": "b43037d43bc0c14d"
